--- a/ng2Demo/demo-proj/src/app/pr/pr-add/pritem-add.component.html
+++ b/ng2Demo/demo-proj/src/app/pr/pr-add/pritem-add.component.html
@@ -3,10 +3,10 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <form class="form-horizontal" [formGroup]="mainForm" (ngSubmit)="doSave()" novalidate>
-        <!--<input type="hidden" [(ngModel)]="currentitem.ID" name="ID">
-        <input type="hidden" [(ngModel)]="currentitem.PRID" name="PRID">-->
+        <input type="hidden" formControlName="ID">
+        <input type="hidden" formControlName="PRID">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="addItemModal.hide();"><span aria-hidden="true">&times;</span></button>
+          <button type="button" class="close" (click)="hide();"><span aria-hidden="true">&times;</span></button>
           <h4 class="modal-title">
             添加采购商品
           </h4>
@@ -25,12 +25,45 @@
                     </span>
                 </div>
               </div>
+              <div class="form-group">
+                <label class="col-sm-2 control-label">
+                    单价<span style="color: #F00">*</span>
+                </label>
+                <div class="col-sm-10">
+                  <input required formControlName="Price" type="text" class="form-control" style="width:350px" />
+                  <span *ngIf="formErrors.Price" class="text-danger">
+                        {{ formErrors.Price }}
+                    </span>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-2 control-label">
+                    数量<span style="color: #F00">*</span>
+                </label>
+                <div class="col-sm-10">
+                  <input required formControlName="Count" type="text" class="form-control" style="width:350px" />
+                  <span *ngIf="formErrors.Count" class="text-danger">
+                        {{ formErrors.Count }}
+                    </span>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-2 control-label">
+                    备注<span style="color: #F00; visibility: hidden">*</span>
+                </label>
+                <div class="col-sm-10">
+                  <textarea formControlName="Remark" class="form-control" style="width:350px" cols="30" rows="10"></textarea>
+                  <span *ngIf="formErrors.Remark" class="text-danger">
+                        {{ formErrors.Remark }}
+                    </span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
         <div class="modal-footer">
           <input [disabled]="mainForm.invalid" type="submit" class="btn btn-primary btn-post" value="确定">
-          <button type="button" class="btn btn-default btn-cancel" data-dismiss="modal">取消</button>
+          <button type="button" class="btn btn-default" (click)="hide()">取消</button>
         </div>
       </form>
     </div>
