--- a/ng2Demo/demo-proj/src/app/pr/pr-add/pr-add.component.html
+++ b/ng2Demo/demo-proj/src/app/pr/pr-add/pr-add.component.html
@@ -96,7 +96,7 @@
               {{ p.Remark }}
             </td>
             <td>
-              <button type="button" class="btn btn-default" (click)="editItem(p)">编辑</button>
+              <button type="button" class="btn btn-default" (click)="editItem(i)">编辑</button>
               <button type="button" class="btn btn-default" (click)="delItem(i)">删除</button>
             </td>
           </tr>
